<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">dogs_cats</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="dogs">Dogs</string>
    <string name="labrador">Labrador</string>
    <string name="pug">Pug</string>
    <string name="german">German shepherd</string>
    <string name="husky">Siberian husky</string>
    <string name="poodle">Poodle</string>
    <string name="labrador_desc">The Labrador Retriever is one of several kinds of retrievers, a type of gun dog. Even-tempered and well-behaved around young children and the elderly, Labradors are athletic, playful, and the most popular breed of dog by registered ownership in Australia, Canada, New Zealand, the United Kingdom, and the United States</string>
    <string name="pug_desc">The pug is a toy dog with a wrinkly, short-muzzled face and curled tail. The breed has a fine, glossy coat that comes in a variety of colors, although often black or fawn, and a compact square body with well-developed muscles. Known in ancient China as lo-sze, pugs as breeding animals may have contributed to the English Bulldog.</string>
    <string name="german_desc">The German Shepherd is a breed of large-sized dog that originated in Germany.They are a relatively new breed of dog, with their origin dating to 1899. As part of the Herding Group, they are working dogs developed originally for herding sheep, because of their strength, intelligence, trainability and obedience</string>
    <string name="poodle_desc">The poodle is a group of formal dog breeds, the Standard Poodle, Miniature Poodle and Toy Poodle, with many coat colors. Originally bred in Germany as a type of water dog, the breed was standardized in France. The poodle is skillful in many dog sports, including agility, obedience, tracking, and even herding</string>
    <string name="husky_desc">The Siberian Husky is a medium to large, dense-coat working dog breed that originated in north-eastern Siberia. The breed belongs to the Spitz genetic family. It is recognizable by its thickly furred double coat, sickle tail, erect triangular ears, and distinctive markings.</string>
    <string name="beagle_desc">The Beagle is a breed of small to medium-sized dog. A member of the Hound Group, it is similar in appearance to the Foxhound, but smaller with shorter legs and longer, softer ears. Beagles are scent hounds, developed primarily for tracking hare. They have a great sense of smell and tracking instinct</string>
    <string name="beagle">Beagle</string>
    <string name="bichonfrise_desc">A Bichon Frisé, is a small breed of dog of the Bichon type. They are popular pets, similar in appearance to but larger than the Maltese.These are small dogs that weighs approximately 5–10 kg and stands 23–30 cm at the withers. The skull is slightly rounded and the muzzle is not pointy. The tail is groomed to be long and curly.</string>
    <string name="bichonfrise">Bichon Frise</string>
    <string name="dalmatian_desc">he Dalmatian is a breed of dog whose roots trace back to Croatia and its historical region of Dalmatia. The Dalmatian is noted for its unique black or liver spotted coat and was mainly used as a carriage dog in its early days. Today, this dog remains a well-loved family pet, and many dog enthusiasts enter their pets into the competitions of many kennel clubs.</string>
    <string name="dalmatian">Dalmatian</string>
    <string name="pomeranian_desc">The Pomeranian is a breed of dog of the Spitz type, named for the Pomerania region in Central Europe . Classed as a toy dog breed because of its small size, the Pomeranian is descended from the larger Spitz type dogs, specifically the German Spitz.</string>
    <string name="pomeranian">Pomeranian</string>
    <string name="scottishfold_desc">The Scottish Fold is a breed of cat with a natural dominant-gene mutation that makes its ear cartilage contain a fold, causing the ears to bend forward and down towards the front of their head, which gives the cat what is often described as an \"owl-like\" appearance.The original Scottish Fold was a white barn cat named Susie, who was found at a farm near Coupar Angus in Perthshire, Scotland, in 1961. Susie\'s ears had an unusual fold in their middle, making her resemble an owl.</string>
    <string name="bobtail_desc">The American Bobtail is an uncommon breed of domestic cat which was developed in the late 1960s.It is most notable for its stubby \"bobbed\" tail about one-third to one-half the length of a normal cat\'s tail. This is the result of a cat body type genetic mutation affecting the tail development, similar to that of a Manx cat. The breed is not related to the Japanese Bobtail despite the similar name and physical type—the breeding programs are entirely unrelated, and the genetic mutation causing the bobbed tail are known to be different because the mutation causing the American Bobtail\'s tail is dominant, whereas the Japanese Bobtail tail mutation is recessive.</string>
    <string name="curl_desc">The American Curl is a breed of cat characterized by its unusual ears, which curl back from the face toward the center of the back of the skull. An American Curl\'s ears should be handled carefully because rough handling may damage the cartilage in the ear. The breed originated in Lakewood, California, as the result of a spontaneous mutation.In June 1981, two stray kittens were found and taken in by the Ruga family. The kittens were both longhaired, one black and the other black and white. The family named them Shulamith and Panda respectively, but Panda disappeared several weeks later, making Shulamith the foundation female of the American Curl breed.</string>
    <string name="turkishangora_desc">The Turkish Angora is a breed of domestic cat. Turkish Angoras are one of the ancient, natural breeds of cat, having originated in central Turkey, in the Ankara region. The breed has been documented as early as the 1600s and is believed to be the origin of the mutations for both the coloration white and long hair. The breed is also sometimes referred to as simply the Angora or Ankara cat.</string>
    <string name="aegean_desc">The Aegean cat is a naturally occurring landrace of domestic cat originating from the Cycladic Islands of Greece. Development of the Aegean cat as a formal breed began in the early 1990s by breeders in the fledgling Greek cat fancy, but the variety has yet to be recognized by any major fancier and breeder organization. It is considered to be the only native Greek variety of cat.They are common as feral cats in Greece, where they are found amongst fishing ports begging for food. In Greece, Aegean cats are considered a national treasure.</string>
    <string name="balinese_desc">The Balinese is breed of domestic cat with long hair and Siamese-style point coloration. It is also known as a Longhaired Siamese, since it is essentially a mutation of the Siamese with a medium-length silky coat and a plumed tail. The Balinese is extremely similar to the Javanese; all non-pointed Balinese cats are considered Javanese. They are known for their gregarious natures.Like the Siamese, there are now two different varieties of Balinese being bred and shown – \"traditional\" and \"contemporary\". 
        The traditional has a coat approximately two inches long over its entire body and it is a sturdy and robust cat with a semi-rounded muzzle and ears. A contemporary has a much shorter coat and is virtually identical to a standard show Siamese except for its tail</string>
    <string name="americanpolydactyl_desc">A polydactyl cat is a cat with a congenital physical anomaly called polydactyly , a type of cat body-type genetic mutation that causes the cat to be born with more than the usual number of toes on one or more of its paws. Cats with this genetically inherited trait are most commonly found along the East Coast of North America and in South West England and Wales.The true polydactyly is a congenital abnormality, genetically inherited as an autosomal dominant trait of the Pd gene with incomplete penetrance.</string>
    <string name="cyprus_desc">The Cyprus cat is a landrace of domestic cat believed to be descended from cats of Egypt or Palestine brought to Cyprus by St. Helen to rid the island of snakes and vermin. It is not recognized as a formal breed by any major cat fancier and breeder organization.The Cyprus cat, a close relative of the Cyprus Longhair, is an athletic and energetic variety found throughout the island of Cyprus; from mountainous and cooler regions to the lower, hotter areas near the coasts. As such, this cat has adapted to different climates.Many Cypriot cats can be found in the cities of Cyprus, including Limassol, Nicosia, Paphos, and Larnaca. In many cases, large populations have become feral</string>
    <string name="asiansemilonghair_desc">The Asian Semi-Longhair is a cat breed similar to the Asian Shorthair except it has semi-long fur. The breed is also known by the name Tiffanie or Tiffany. They are recognized in any of the Asian Shorthair or Burmese colors and patterns. Like the Asian Shorthair, the breed was developed in Britain, and is not currently recognized by any U.S. Registries. It has full recognition in the GCCF. It is related to, and in some registries distinct from, the Chantilly-Tiffany or Foreign Longhair the North American variant.The Tiffany cat is a gentle, active and curious breed. They are really attached to their owners, but do not always get along with other cats, since they can be quite jealous.</string>
    <string name="cats">Cats</string>
    <string name="scottishfold">Scottish Fold</string>
    <string name="bobtail">Bob Tail</string>
    <string name="curl">American Curl</string>
    <string name="turkishangora">Turkish Angora</string>
    <string name="aegean">Aegean</string>
    <string name="balinese">Balinese</string>
    <string name="americanpolydactyl">American Polydactyl</string>
    <string name="cyprus">Cyprus</string>
    <string name="asiansemilonghair">Asian Semi-long Hair</string>

</resources>
