<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Pink"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:fontFamily="Verdana"
            android:gravity="center"
            android:text="@string/dogs"
            android:textColor="@color/Black"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            android:typeface="sans" />

        <ImageView
            android:id="@+id/labrador"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/title"
            android:layout_margin="5dp"
            android:contentDescription="@string/labrador"
            android:paddingTop="20dp"
            android:src="@drawable/labrador" />

        <TextView
            android:id="@+id/labrador_heading"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignLeft="@+id/labrador"
            android:layout_below="@+id/title"
            android:gravity="center"
            android:text="@string/labrador"
            android:textColor="@color/Crimson" />

        <TextView
            android:id="@+id/labrador_text"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_below="@+id/labrador_heading"
            android:layout_toRightOf="@+id/labrador"
            android:gravity="center_horizontal"
            android:text="@string/labrador_desc"
            android:textColor="@color/Teal" />

        <TextView
            android:id="@+id/pug_heading"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignRight="@+id/husky"
            android:layout_below="@+id/labrador"
            android:gravity="center"
            android:text="@string/pug"
            android:textColor="@color/Crimson" />

        <TextView
            android:id="@+id/pug_text"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_below="@+id/pug_heading"
            android:layout_toLeftOf="@+id/pug"
            android:gravity="center_horizontal"
            android:text="@string/pug_desc"
            android:textColor="@color/Teal" />

        <ImageView
            android:id="@+id/german"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/pug"
            android:layout_margin="5dp"
            android:contentDescription="@string/german"
            android:paddingTop="20dp"
            android:src="@drawable/german" />

        <TextView
            android:id="@+id/german_heading"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignLeft="@+id/german"
            android:layout_below="@+id/pug_text"
            android:gravity="center"
            android:text="@string/german"
            android:textColor="@color/Crimson" />

        <TextView
            android:id="@+id/german_text"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_below="@+id/german_heading"
            android:layout_toRightOf="@+id/german"
            android:gravity="center_horizontal"
            android:text="@string/german_desc"
            android:textColor="@color/Teal" />

        <ImageView android:id="@+id/pug" android:layout_width="150dp" android:layout_height="150dp" android:layout_alignParentRight="true" android:layout_below="@+id/labrador" android:layout_margin="5dp" android:layout_marginRight="40dp" android:contentDescription="@string/pug" android:paddingTop="20dp" android:src="@drawable/pug_puppy" /><TextView
            android:id="@+id/husky_heading"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignRight="@+id/husky"
            android:layout_below="@+id/german"
            android:gravity="center"
            android:text="@string/husky"
            android:textColor="@color/Crimson" />

        <TextView
            android:id="@+id/husky_text"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_below="@+id/husky_heading"
            android:layout_toLeftOf="@+id/husky"
            android:gravity="center_horizontal"
            android:text="@string/husky_desc"
            android:textColor="@color/Teal" />

        <ImageView
            android:id="@+id/poodle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/husky"
            android:layout_margin="5dp"
            android:contentDescription="@string/poodle"
            android:paddingTop="20dp"
            android:src="@drawable/poodle" />

        <TextView
            android:id="@+id/poodle_heading"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignLeft="@+id/poodle"
            android:layout_below="@+id/husky_text"
            android:gravity="center"
            android:text="@string/poodle"
            android:textColor="@color/Crimson" />

        <TextView
            android:id="@+id/poodle_text"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_below="@+id/poodle_heading"
            android:layout_toRightOf="@+id/poodle"
            android:gravity="center_horizontal"
            android:text="@string/poodle_desc"
            android:textColor="@color/Teal" />

        

         
        
        
        <ImageView
            android:id="@+id/husky"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/german"
            android:layout_margin="5dp" 
            android:layout_toRightOf="@+id/pug_text"
            android:contentDescription="@string/husky"
            android:paddingTop="20dp"
            android:src="@drawable/husky" />
        
        
        
        
       
        
        
          <ImageView android:id="@+id/beagle"
              android:layout_width="150dp"
               android:layout_height="150dp"
                android:layout_alignParentRight="true" 
                android:layout_below="@+id/poodle" 
                android:layout_margin="5dp" 
                android:layout_marginRight="40dp" 
                android:contentDescription="@string/beagle"
                 android:paddingTop="20dp" 
                 android:src="@drawable/beagle" />
          <TextView
            android:id="@+id/beagle_heading"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignRight="@+id/beagle"
            android:layout_below="@+id/poodle"
            android:gravity="center"
            android:text="@string/beagle"
            android:textColor="@color/Crimson" />

        <TextView
            android:id="@+id/beagle_text"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_below="@+id/beagle_heading"
            android:layout_toLeftOf="@+id/beagle"
            android:gravity="center_horizontal"
            android:text="@string/beagle_desc"
            android:textColor="@color/Teal" />

        <ImageView
            android:id="@+id/bichonfrise"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/beagle"
            android:layout_margin="5dp"
            android:contentDescription="@string/bichonfrise"
            android:paddingTop="20dp"
            android:src="@drawable/bichonfrise" />

        <TextView
            android:id="@+id/bichonfrise_heading"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignLeft="@+id/bichonfrise"
            android:layout_below="@+id/beagle_text"
            android:gravity="center"
            android:text="@string/bichonfrise"
            android:textColor="@color/Crimson" />

        <TextView
            android:id="@+id/bichonfrise_text"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_below="@+id/bichonfrise_heading"
            android:layout_toRightOf="@+id/bichonfrise"
            android:gravity="center_horizontal"
            android:text="@string/bichonfrise_desc"
            android:textColor="@color/Teal" />

         <!-- additions -->
           <ImageView android:id="@+id/dalmatian"
              android:layout_width="150dp"
               android:layout_height="150dp"
                android:layout_alignParentRight="true" 
                android:layout_below="@+id/bichonfrise" 
                android:layout_margin="5dp" 
                android:layout_marginRight="40dp" 
                android:contentDescription="@string/dalmatian"
                 android:paddingTop="20dp" 
                 android:src="@drawable/dalmatian" />
          <TextView
            android:id="@+id/dalmatian_heading"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignRight="@+id/dalmatian"
            android:layout_below="@+id/bichonfrise"
            android:gravity="center"
            android:text="@string/dalmatian"
            android:textColor="@color/Crimson" />

        <TextView
            android:id="@+id/dalmatian_text"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_below="@+id/dalmatian_heading"
            android:layout_toLeftOf="@+id/dalmatian"
            android:gravity="center_horizontal"
            android:text="@string/dalmatian_desc"
            android:textColor="@color/Teal" />

        <ImageView
            android:id="@+id/pomeranian"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/dalmatian"
            android:layout_margin="5dp"
            android:contentDescription="@string/pomeranian"
            android:paddingTop="20dp"
            android:src="@drawable/pomeranian" />

        <TextView
            android:id="@+id/pomeranian_heading"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_alignLeft="@+id/pomeranian"
            android:layout_below="@+id/dalmatian_text"
            android:gravity="center"
            android:text="@string/pomeranian"
            android:textColor="@color/Crimson" />

        <TextView
            android:id="@+id/pomeranian_text"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_below="@+id/pomeranian_heading"
            android:layout_toRightOf="@+id/pomeranian"
            android:gravity="center_horizontal"
            android:text="@string/pomeranian_desc"
            android:textColor="@color/Teal" />
         
         
    </RelativeLayout>

</ScrollView>